[gd_scene load_steps=71 format=2]

[ext_resource path="res://Assets/Effects/1/1_2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Effects/1/1_3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Effects/1/1_4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Effects/1/1_0.png" type="Texture" id=4]
[ext_resource path="res://Assets/Effects/1/1_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Effects/1/1_28.png" type="Texture" id=6]
[ext_resource path="res://Assets/Effects/1/1_29.png" type="Texture" id=7]
[ext_resource path="res://Assets/Effects/1/1_33.png" type="Texture" id=8]
[ext_resource path="res://Assets/Effects/1/1_32.png" type="Texture" id=9]
[ext_resource path="res://Assets/Effects/1/1_30.png" type="Texture" id=10]
[ext_resource path="res://Assets/Effects/1/1_31.png" type="Texture" id=11]
[ext_resource path="res://Assets/Effects/1/1_7.png" type="Texture" id=12]
[ext_resource path="res://Assets/Effects/1/1_11.png" type="Texture" id=13]
[ext_resource path="res://Assets/Effects/1/1_13.png" type="Texture" id=14]
[ext_resource path="res://Assets/Effects/1/1_6.png" type="Texture" id=15]
[ext_resource path="res://Assets/Effects/1/1_10.png" type="Texture" id=16]
[ext_resource path="res://Assets/Effects/1/1_5.png" type="Texture" id=17]
[ext_resource path="res://Assets/Effects/1/1_8.png" type="Texture" id=18]
[ext_resource path="res://Assets/Effects/1/1_9.png" type="Texture" id=19]
[ext_resource path="res://Assets/Effects/1/1_12.png" type="Texture" id=20]
[ext_resource path="res://Assets/Weapons/bonk-missile/bonk_missile.png" type="Texture" id=21]
[ext_resource path="res://Assets/Effects/1/1_22.png" type="Texture" id=22]
[ext_resource path="res://Assets/Effects/1/1_23.png" type="Texture" id=23]
[ext_resource path="res://Assets/Effects/1/1_24.png" type="Texture" id=24]
[ext_resource path="res://Assets/Effects/1/1_25.png" type="Texture" id=25]
[ext_resource path="res://Assets/Effects/1/1_27.png" type="Texture" id=26]
[ext_resource path="res://Assets/Effects/1/1_26.png" type="Texture" id=27]
[ext_resource path="res://Assets/Effects/1/1_17.png" type="Texture" id=28]
[ext_resource path="res://Assets/Effects/1/1_19.png" type="Texture" id=29]
[ext_resource path="res://Assets/Effects/1/1_20.png" type="Texture" id=30]
[ext_resource path="res://Assets/Effects/1/1_21.png" type="Texture" id=31]
[ext_resource path="res://Assets/Effects/1/1_16.png" type="Texture" id=32]
[ext_resource path="res://Assets/Effects/1/1_14.png" type="Texture" id=33]
[ext_resource path="res://Assets/Effects/1/1_18.png" type="Texture" id=34]
[ext_resource path="res://Assets/Effects/1/1_15.png" type="Texture" id=35]
[ext_resource path="res://Assets/Effects/1/1_59.png" type="Texture" id=36]
[ext_resource path="res://Assets/Effects/1/1_56.png" type="Texture" id=37]
[ext_resource path="res://Assets/Effects/1/1_36.png" type="Texture" id=38]
[ext_resource path="res://Assets/Effects/1/1_48.png" type="Texture" id=39]
[ext_resource path="res://Assets/Effects/1/1_54.png" type="Texture" id=40]
[ext_resource path="res://Assets/Effects/1/1_57.png" type="Texture" id=41]
[ext_resource path="res://Assets/Effects/1/1_50.png" type="Texture" id=42]
[ext_resource path="res://Assets/Effects/1/1_38.png" type="Texture" id=43]
[ext_resource path="res://Assets/Effects/1/1_53.png" type="Texture" id=44]
[ext_resource path="res://Assets/Effects/1/1_46.png" type="Texture" id=45]
[ext_resource path="res://Assets/Effects/1/1_35.png" type="Texture" id=46]
[ext_resource path="res://Assets/Effects/1/1_55.png" type="Texture" id=47]
[ext_resource path="res://Assets/Effects/1/1_41.png" type="Texture" id=48]
[ext_resource path="res://Assets/Effects/1/1_49.png" type="Texture" id=49]
[ext_resource path="res://Assets/Effects/1/1_45.png" type="Texture" id=50]
[ext_resource path="res://Assets/Effects/1/1_39.png" type="Texture" id=51]
[ext_resource path="res://Assets/Effects/1/1_51.png" type="Texture" id=52]
[ext_resource path="res://Assets/Effects/1/1_43.png" type="Texture" id=53]
[ext_resource path="res://Assets/Effects/1/1_37.png" type="Texture" id=54]
[ext_resource path="res://Assets/Effects/1/1_60.png" type="Texture" id=55]
[ext_resource path="res://Assets/Effects/1/1_40.png" type="Texture" id=56]
[ext_resource path="res://Assets/Effects/1/1_44.png" type="Texture" id=57]
[ext_resource path="res://Assets/Effects/1/1_52.png" type="Texture" id=58]
[ext_resource path="res://Assets/Effects/1/1_34.png" type="Texture" id=59]
[ext_resource path="res://Assets/Effects/1/1_47.png" type="Texture" id=60]
[ext_resource path="res://Assets/Effects/1/1_58.png" type="Texture" id=61]
[ext_resource path="res://Assets/Effects/1/1_42.png" type="Texture" id=62]
[ext_resource path="res://Weapons/weapon_new/Missile_New_And_New.gd" type="Script" id=63]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 28 ), ExtResource( 34 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 59 ), ExtResource( 46 ), ExtResource( 38 ), ExtResource( 54 ), ExtResource( 43 ), ExtResource( 51 ), ExtResource( 56 ), ExtResource( 48 ), ExtResource( 62 ), ExtResource( 53 ), ExtResource( 57 ), ExtResource( 50 ), ExtResource( 45 ), ExtResource( 60 ), ExtResource( 39 ), ExtResource( 49 ), ExtResource( 42 ), ExtResource( 52 ), ExtResource( 58 ), ExtResource( 44 ), ExtResource( 40 ), ExtResource( 47 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 61 ), ExtResource( 36 ), ExtResource( 55 ) ],
"loop": true,
"name": "fire_ef_misslie",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
height = 149.325

[sub_resource type="Animation" id=4]
resource_name = "Missile"
length = 0.4

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 860.015

[node name="Missile_New_And_New" type="Node2D"]
script = ExtResource( 63 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 21 )
hframes = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="Sprite"]
position = Vector2( -55.0169, -12.0472 )
rotation = 0.0554145
frames = SubResource( 3 )
animation = "fire_ef_misslie"
frame = 43
playing = true

[node name="Colision_missile" type="Area2D" parent="Sprite"]
rotation = -0.0724851
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Colision_missile"]
rotation = -1.36906
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Missile = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Detect_Enemy" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect_Enemy"]
shape = SubResource( 6 )

[node name="queue" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Dis_collision" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="body_shape_entered" from="Sprite/Colision_missile" to="." method="_on_Colision_missile_body_shape_entered"]
[connection signal="body_shape_entered" from="Detect_Enemy" to="." method="_on_Detect_Enemy_body_shape_entered"]
[connection signal="body_shape_exited" from="Detect_Enemy" to="." method="_on_Detect_Enemy_body_shape_exited"]
[connection signal="timeout" from="queue" to="." method="_on_queue_timeout"]
[connection signal="timeout" from="Dis_collision" to="." method="_on_Dis_collision_timeout"]
